# Advent-Of-Code-Haskell

./: README.md  advent-of-code.cabal  advent-of-code.prof
2023/01/: pt1.hs  pt2.hs
2023/02/: pt1.hs  pt2.hs  test.txt
2023/03/: pt12.hs
2023/04/: gpt.hs  pt1.hs  pt2.hs
2023/05/: pt1.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
src/2015/01/: 01-answer.hs
src/Y23/D01/: P1.hs  P2.hs
src/Y23/D02/: P1.hs  P2.hs
src/Y23/D03/: P1.hs  P2.hs
src/Y23/D04/: P1.hs  P2.hs  P2slow.hs
src/Y23/D05/: P1.hs  P1back.hs  P2.hs  P2back.hs
src/Y23/D06/: P1.hs  P2.hs
src/Y23/D07/: P1.hs  P2.hs
src/Y23/D08/: P1.hs  P2.hs
src/Y23/D09/: P1.hs  P2.hs
src/Y23/D10/: P1.hs  P2.hs
src/Y23/D11/: P1.hs  P2.hs
src/Y23/D15/: P1.hs  P2.hs
src/Y23/D16/: P1.hs  P2.hs
