cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Syed Khalid
maintainer:         imsyedkhalid@gmail.com

extra-source-files:
    README.md

executable advent-of-code
    main-is:          Main.hs

    other-modules:   
                      Y23.D01.P1 , Y23.D01.P2
                      Y23.D02.P1 , Y23.D02.P2
                      Y23.D03.P1 , Y23.D03.P2
                      Y23.D04.P1 , Y23.D04.P2
                      Y23.D05.P1 , Y23.D05.P2
                      Y23.D06.P1 , Y23.D06.P2
                      Y23.D07.P1 , Y23.D07.P2
                      Y23.D08.P1 , Y23.D08.P2
                      Y23.D09.P1 , Y23.D09.P2
                      Y23.D10.P1 , Y23.D10.P2

    build-depends:    base ^>=4.17.2.0, haskell-say,text,vector
    hs-source-dirs:   src
    default-language: Haskell2010
